<resources>
    <string name="app_name">Q no More</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tools">Tools</string>
    <string name="account">Account</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="name">Name Surname</string>
    <string name="email">name.surname@gmail.com</string>
    <string name="loading">Loading… Please wait.</string>
    <string name="login">Please sign in</string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
    <string name="cd_navdrawer_image">Navigation Drawer Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drinks">Drinks</string>
    <string name="food">Food</string>
    <string name="warm">Warm</string>
    <string name="cold">Cold</string>
    <string name="drinks_button">Drinks button</string>
    <string name="food_button">Food button</string>
    <string name="cold_button">Cold button</string>
    <string name="warm_button">Warm button</string>
    <string name="button_continue">Confirm</string>
    <string name="price_currency"><![CDATA[Price & Currency]]></string>
    <string name="title_item">Title / Item</string>
    <string name="button_back">Back</string>
    <string name="num_zero">0</string>
    <string name="euroSymbol">€%1$s</string>
    <string name="my_orders">My Orders</string>
    <string name="sum_all_orders">Sum all orders:</string>
    <string name="specificOrderItemExample">10 x Pepperoni Pizza</string>
    <string name="delivered_text">Delivered</string>
    <string name="in_progress">In Progress</string>
    <string name="locations">Locations</string>
    <string name="title_activity_maps">Map</string>
</resources>
