<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/home"/>
        <item
                android:id="@+id/nav_order"
                android:icon="@drawable/ic_format_list_numbered"
                android:title="@string/my_orders"
            />
        <item
                android:id="@+id/nav_locations"
                android:title="@string/locations"
                android:icon="@drawable/ic_place"
                />
        <item
                android:id="@+id/nav_account_circle"
                android:icon="@drawable/ic_account_circle"
                android:title="@string/account"/>
        <item
                android:id="@+id/menu_none"
                android:title=""
                android:visible="false"/>
    </group>

</menu>
